--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Anuj",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.709.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
