--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
