--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.2",
     "react-slick": "^0.30.3",
