--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "classnames": "^2.5.1",
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
