--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.4.0",
+    "react-images-viewer": "^1.7.1",
     "react-leaflet": "^5.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.2",
+    "react-simple-image-viewer": "^1.2.2",
     "react-slick": "^0.30.3",
     "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1"
