--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,20 @@
     "@headlessui/react": "^2.2.0",
     "classnames": "^2.5.1",
     "leaflet": "^1.9.4",
-    "react": "^19.0.0-rc.1",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.4.0",
     "react-images-viewer": "^1.7.1",
     "react-leaflet": "^5.0.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.2",
     "react-simple-image-viewer": "^1.2.2",
     "react-slick": "^0.30.3",
     "react-stars": "^2.2.5",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
