--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
